RESOLVED FIXED232805
Fix the CGEvent types used for wheel event generation from streams
https://bugs.webkit.org/show_bug.cgi?id=232805
Summary Fix the CGEvent types used for wheel event generation from streams
Simon Fraser (smfr)
Reported 2021-11-07 20:40:41 PST
Fix the CGEvent types used for wheel event generation from streams
Attachments
Patch (6.68 KB, patch)
2021-11-07 20:43 PST, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2021-11-07 20:43:54 PST
Sam Weinig
Comment 2 2021-11-08 08:36:42 PST
Comment on attachment 443524 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=443524&action=review > Tools/ChangeLog:10 > + The set of enum values for wheel event types are confusing, and I used the wrong ones in > + r285390, so fix that. Values are all the same other than kCGMomentumScrollPhaseEnd which is > + now correct. Is the end phase being different detectable?
Simon Fraser (smfr)
Comment 3 2021-11-08 09:27:32 PST
(In reply to Sam Weinig from comment #2) > Comment on attachment 443524 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=443524&action=review > > > Tools/ChangeLog:10 > > + The set of enum values for wheel event types are confusing, and I used the wrong ones in > > + r285390, so fix that. Values are all the same other than kCGMomentumScrollPhaseEnd which is > > + now correct. > > Is the end phase being different detectable? I don't think it is currently. Since this is new test infrastructure I didn't try to make a regression test for that.
Simon Fraser (smfr)
Comment 4 2021-11-08 09:59:55 PST
Radar WebKit Bug Importer
Comment 5 2021-11-08 10:00:24 PST
Note You need to log in before you can comment on or make changes to this bug.